# quotegraph

./: README.md  build_quotegraph.py  data_utils.py  example_notebook.ipynb  find_quotation_ends.py  model_utils.py  personal_references.ipynb  plot_utils.py  pyproject.toml  sampling.py  spark_utils.py
annotation/: app.py  prepare_test_batch.py  pyproject.toml  sample_batches.py
annotation/.streamlit/: config.toml
annotation/data/: input_data.json
annotation/data/annotations/: annotations_1234.json  annotations_bff4277a.json
figures/: EMNLP_PLAN.md  PAPEREMNLP.md  compose_liwc_figures.py  liwc_analysis.py  liwc_mixed_effects.R
figures/composite/: liwc_literature_comparison.md
postprocessing/: filter_by_lists.py  remove_self_quotations.py
postprocessing/data/: mention_blacklist.txt  mention_greylist.txt  name_blacklist.txt
quotegraph/: __init__.py  entity_extractor.py  utils.py
scripts/: build_tries.py  clean_wikidata.py  extract_entities.py  get_per_outlet_quote_frequencies.py  get_quotegraph_articles.py  json2parquet.py  parse_redirects.py  sample_articles.py  wikidata2parquet.py
scripts/preprocessing/: build_quotegraph.py  find_quotation_ends.py
