[project]
name = "quotegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jdk4py>=21.0.8.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pygtrie>=2.5.0",
    "pyspark>=3.5.7",
    "tld>=0.13.1",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
]


[tool.setuptools]
packages = ["quotegraph"]

